# drone-tuner

./: .gitignore  CLAUDE.md  CLI_INTEGRATION_TESTS_SUMMARY.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  analysis_report.md
.github/workflows/: ci.yml
crates/drone-tuner-cli/: Cargo.toml
crates/drone-tuner-cli/src/: display.rs  history.rs  main.rs  paths.rs
crates/drone-tuner-cli/tests/: command_specific.rs  integration.rs  performance.rs
crates/drone-tuner-cli/tests/common/: mod.rs
crates/drone-tuner-core/: Cargo.toml
crates/drone-tuner-core/benches/: blackbox_parser.rs  fft_analysis.rs
crates/drone-tuner-core/src/: analysis.rs  blackbox_old.rs  domain.rs  error.rs  filters.rs  lib.rs  realtime.rs
crates/drone-tuner-core/src/analysis/: advanced.rs  convergence.rs  debug_d_term.rs  debug_tests.rs  filter_optimizer.rs  oscillation.rs  pid.rs  realistic_tests.rs  tests.rs
crates/drone-tuner-core/src/blackbox/: converter.rs  mod.rs  parser.rs  simple_parser.rs
crates/drone-tuner-core/tests/: calibration.rs
crates/drone-tuner-core/tests/snapshots/: calibration__calibration_btfl_all.snap  calibration__calibration_btfl_all_old.snap  calibration__calibration_btfl_all_pre.snap  calibration__calibration_jeno_post_tune_is_quiet.snap  calibration__calibration_tbs_post_tune_is_quiet.snap
docs/: PROJECT_ASSESSMENT.md  prd.md  technical-development-document.md
examples/: basic_analysis.rs  config_inspection.rs  data_inspection.rs  simple_blackbox_test.rs  simple_config_check.rs
test_data/: jeno_after.bbl  tbs_after.bbl
