[workspace]
resolver = "2"
members = [
    "crates/drone-tuner-core",
    "crates/drone-tuner-cli",
]

[workspace.dependencies]
ndarray = "0.16.1"
rustfft = "6.2"
nalgebra = "0.34.0"
num-complex = "0.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["full"] }
nom = "8.0.0"
blackbox-log = "0.4.3"
thiserror = "2.0.16"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
serialport = "4.2"
proptest = "1.4"
criterion = { version = "0.7.0", features = ["html_reports"] }
async-trait = "0.1"
insta = { version = "1.41", features = ["json"] }

[profile.release]
# Optimize for performance and binary size
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true