[package]
name = "drone-tuner-core"
version = "0.1.0"
edition = "2021"
description = "Core analysis engine for FPV drone tuning"
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace dependencies
ndarray = { workspace = true }
rustfft = { workspace = true }
nalgebra = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, optional = true }
nom = { workspace = true }
blackbox-log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
serialport = { workspace = true, optional = true }
async-trait = { workspace = true }

[features]
default = []
realtime = ["tokio", "serialport"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio-test = "0.4"
insta = { workspace = true }

[[bench]]
name = "fft_analysis"
harness = false

[[bench]]
name = "blackbox_parser"
harness = false

[[example]]
name = "simple_blackbox_test"
path = "../../examples/simple_blackbox_test.rs"

[[example]]
name = "data_inspection"
path = "../../examples/data_inspection.rs"

[[example]]
name = "config_inspection"
path = "../../examples/config_inspection.rs"

[[example]]
name = "simple_config_check"
path = "../../examples/simple_config_check.rs"